--- a/Slides/frontend/public/index.html
+++ b/Slides/frontend/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Ecole Numérique El Amri - plateforme de création de cours</title>
+    <title>EduSlides</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
